fix translation on mobile device once swiped

--- a/src/components/List/_list.scss
+++ b/src/components/List/_list.scss
@@ -49,7 +49,7 @@ $easing: cubic-bezier(0.51, 0.92, 0.24, 1.15);
       max-height: 0;
       margin: 0;
       opacity: 0;
-      transform: translateX(150vw);
+      transform: translateX(calc(#{var(--x-dist)} * 1px + 100vw));
       transition: transform 0.5s $easing, max-height 0.5s $easing,
         margin 0.5s $easing, opacity 0.25s;
     }
